This time is the second time to reuse this git system. :)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hi, Nice to meet you. :)
+<html>
+  <head>
+    <title>Page title</title>
+  </head>
+
+  <body>
+    <h1>This is a heading</h1>
+    <p>This is a paragraph.</p>
+    <p>This is another paragraph.</p>
+  </body>
+</html>
