Now I'm starting my resume.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <title>Page title</title>
   </head>
 
-  <body>
-    <h1>This is a heading</h1>
-    <p>This is a paragraph.</p>
-    <p>This is another paragraph.</p>
+  <body style="background-color:yellow">
+    <h1 style="text align:center">Hello my name is Ken :)</h1>
+    <p>Now this is use to introduce myself</p>
+    <hr>
+    <p style="font-size:100px">Nice to meet you.</p>
   </body>
 </html>
