The step before I go to the web dynamic

--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <html>
   <head>
     <title>Page title</title>
+    <stylie>
+    a:link{
+      color: green;
+      background-color: transparent;
+      text-decoration: none;
+      }
+    a:visited {
+      color:red;
+      background-color:transparent;
+      text-decoration:none;
+      }
+    a:hover {
+      color:black;
+      background-color: white;
+      text-decoration:underline;
+      }
+    a:active{
+      color:blue;
+      background-color:transparent;
+      text-decoration:underline;
+      }
+
+      ("#try").animate({"margin-left": "300px"}, 2000, function(){};
+      </style>
   </head>
 
   <body style="background-color:yellow">
-    <h1 style="text align:center">Hello my name is Ken :)</h1>
+    <h1 id="try" style="text align:center">Hello my name is Ken :) </h1>
     <p>Now this is use to introduce myself</p>
     <hr>
     <p style="font-size:100px">Nice to meet you.</p>
+    <img src="http://imageshack.com/a/img921/6232/SZ7X5u.jpg"
+    alt="My photo" style="float:center width:300px;height:250px;">
     <a href="https://www.facebook.com/profile.php?id=100001687366949">
     <p>This is my facebook link<p>
     </a>
