--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Page title</title>
-    <stylie>
+    <style>
     a:link{
       color: green;
       background-color: transparent;
